# majnet

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: app-release.yaml  ci.yaml  images.yaml
bootstrap/: README.md  bootstrap.sh  install.sh  majnet-cleanup  majnet-export  majnet-update  node.env.example
bootstrap/lib/: common.sh
bootstrap/pki/: gen-certs.sh
bootstrap/steps/: 10-base.sh  20-wireguard.sh  30-docker.sh  40-firewall.sh  50-agents.sh  60-backups.sh  70-dashboard.sh
crates/bot/: Cargo.toml  README.md
crates/bot/migrations/: V1__baseline.sql
crates/bot/src/: acme.rs  authz.rs  cloudflare.rs  config.rs  control_plane.rs  dashboard_api.rs  deploys.rs  digest.rs  ephemeral.rs  git.rs  main.rs  migrate.rs  org_sync.rs  platform_api.rs  promote.rs  proxy.rs  releases.rs  render.rs  state.rs  tailscale.rs  template_sync.rs  webhooks.rs
crates/common/: Cargo.toml
crates/common/src/: authz.rs  lib.rs  manifest.rs  merge.rs  platform.rs  project.rs  tarball.rs
crates/reconciler/: Cargo.toml  README.md
crates/setup/: README.md
dashboard/: Dockerfile  README.md  compose.yaml  index.html  nginx.conf
deploy/: compose.yaml
docs/: design.md  roadmap.md
platform-seed/: README.md  nodes.yaml  people.yaml  projects.yaml  tailscale-acl.tmpl  version.yaml
scripts/: smoke-test.sh
templates/repo-templates/rust-service/: Cargo.toml  Dockerfile
templates/repo-templates/rust-service/.github/workflows/: build.yaml  commit-lint.yaml  release.yaml
templates/repo-templates/rust-service/src/: main.rs
(+106 files in other folders)
